apps/antiginx/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: antiginx
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: frontend-port
      port: 3000
      targetPort: 3000
